--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ oauthlib==2.0.1
 packaging==16.8
 pyparsing==2.1.10
 python-twitter==3.2.1
-requests==2.13.0
+requests>=2.20.0
 requests-oauthlib==0.8.0
 six==1.10.0
